# bioma

./: .continuerc.json  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  curls.sh  docker-compose.yml  ollama-setup.sh  package-lock.json  pyproject.toml
apps/goose_attack/: Cargo.toml  README.md
apps/goose_attack/docs/: attack_rag_server.md
apps/goose_attack/src/: attack_rag_server.rs
apps/rag_mcp/: Cargo.toml  README.md
apps/rag_mcp/examples/: client.rs  server.rs
apps/rag_mcp/src/: main.rs  user.rs
apps/rag_mcp/src/rag_tools/: ask.rs  chat.rs  delete_source.rs  embed.rs  health.rs  index.rs  mod.rs  rerank.rs  retrieve.rs  sources.rs  upload.rs
apps/rag_mcp/src/tools/: delete.rs  embed.rs  generate.rs  index.rs  ingest.rs  mod.rs  rerank.rs  retrieve.rs  sources.rs  upload.rs
bioma_actor/: Cargo.toml
bioma_actor/examples/: echo.rs  object_store.rs  story.rs  tictactoe.md  tictactoe.rs
bioma_actor/sql/: def.surql  health.surql  reply.surql  unreplied_messages.surql
bioma_actor/src/: actor.rs  behavior.rs  engine.rs  env.rs  error.rs  factory.rs  lib.rs  message.rs  util.rs
bioma_actor/tests/: actor.rs  engine.rs  message.rs  protocol.rs
bioma_behavior/: Cargo.toml
bioma_behavior/src/: behavior.rs  blackboard.rs  error.rs  lib.rs  tree.rs
bioma_behavior/src/actions/: log.rs  mock.rs  mod.rs  subtree.rs  wait.rs
bioma_behavior/src/composites/: all.rs  any.rs  fallback.rs  mod.rs  selector.rs  sequence.rs  sequencer.rs
bioma_behavior/src/decorators/: always.rs  delay.rs  invert.rs  mod.rs  repeat.rs  timeout.rs
bioma_behavior/src/serializer/: json.rs
bioma_behavior/tests/: actions.rs  all.rs  any.rs  behavior.rs  blackboard.rs  delay.rs  json.rs  repeat.rs  selector.rs  sequencer.rs  subtree.rs  tree.rs
bioma_knowledge/: Cargo.toml  README.md
bioma_knowledge/src/: error.rs  lib.rs  sensory.rs
bioma_knowledge/src/backend/: mod.rs
bioma_knowledge/tests/: ollama.rs
bioma_llm/: Cargo.toml  README.md
bioma_llm/examples/: ask.rs  attack.rs  chat.rs  embeddings.rs  embeddings_image.rs  embeddings_pool.rs  indexer.rs  pdf_analyzer.rs  rag.rs  rag_ask.html  rag_chat.html  rag_server.md  rag_server.rs  rag_uploader.rs  rerank.rs  rerank_pool.rs  retriever.rs
bioma_llm/sql/: def.surql  del_context.surql  del_source.surql  embeddings.surql  list_unique_sources.surql  search.surql  search_sources.surql  similarities.surql  source.surql
bioma_llm/sql/embeddings/: store_image_embedding.surql  store_text_embedding.surql
bioma_llm/sql/similarities/: similarities_image.surql  similarities_text.surql
bioma_llm/src/: ask.rs  chat.rs  embeddings.rs  indexer.rs  lib.rs  llm.rs  markitdown.rs  pdf_analyzer.rs  pdf_to_md.rs  rerank.rs  retriever.rs  summary.rs
bioma_llm/tests/: embeddings.rs  indexer.rs  rag.rs  rag_stress.rs  rerank.rs  retriever.rs  summary.rs
bioma_mcp/: Cargo.toml  README.md
bioma_mcp/examples/: chatbot_client.rs  chatbot_server.rs  mcp_client.rs  mcp_server.rs
bioma_mcp/src/: client.rs  lib.rs  logging.rs  operation.rs  pagination.rs  progress.rs  schema.rs  server.rs
bioma_mcp/src/prompts/: greet.rs  mod.rs
bioma_mcp/src/resources/: filesystem.rs  mod.rs  readme.rs
bioma_mcp/src/tools/: chat.rs  echo.rs  fetch.rs  memory.rs  mod.rs  random.rs  sampling.rs  workflow.rs
bioma_mcp/src/transport/: mod.rs  sse.rs  stdio.rs  streamable.rs  ws.rs
bioma_mcp/tests/: pagination.rs  sse.rs
bioma_rag/: Cargo.toml
bioma_rag/examples/: embeddings.rs  embeddings_image.rs  embeddings_pool.rs  indexer.rs  pdf_analyzer.rs  rag.rs  rerank.rs  rerank_pool.rs  retriever.rs
bioma_rag/sql/: list_sources.surql
bioma_rag/src/: embeddings.rs  indexer.rs  lib.rs  markitdown.rs  rerank.rs  retriever.rs  summary.rs
bioma_rag/tests/: embeddings.rs  indexer.rs  rerank.rs  retriever.rs  summary.rs
bioma_tool/: Cargo.toml  README.md
bioma_tool/examples/: mcp_client.rs  mcp_server.rs  sse_client.rs  sse_server.rs
bioma_tool/src/: client.rs  lib.rs  schema.rs  server.rs  transport.rs
bioma_tool/src/prompts/: greet.rs  mod.rs
bioma_tool/src/resources/: filesystem.rs  mod.rs  readme.rs
bioma_tool/src/roots/: mod.rs  readme.rs
bioma_tool/src/sampling/: chat.rs  mod.rs
bioma_tool/src/tools/: echo.rs  fetch.rs  memory.rs  mod.rs  random.rs  workflow.rs
bioma_tool/src/transport/: client.rs  mod.rs  server.rs  sse.rs  stdio.rs  ws.rs
bioma_tool/src/utils/: ping.rs
bioma_tool/tests/: sse.rs
tools/cognition/: Cargo.toml  README.md
tools/cognition/chat/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
tools/cognition/chat/src/: App.jsx  App.tsx  index.css  main.jsx  types.d.ts
tools/cognition/chat/src/contexts/: ChatContext.jsx  ChatContext.tsx  ConfigContext.jsx  ConfigContext.tsx
tools/cognition/chat/src/hooks/: useLocalStorage.js  useLocalStorage.ts  useRAGService.js  (+3 more)
tools/cognition/docs/: openapi.json
tools/cognition/docs/swagger-ui/: openapi.json
tools/cognition/src/: api_schema.rs  client.rs  client_config.rs  config.rs  health_check.rs  lib.rs  request_schemas.rs  server.rs  server_config.rs  tool.rs  tools_hub.rs  user.rs
tools/cognition/templates/: conversation.html  rag_chat.html  rag_service_status.html  tree.js
tools/cognition/templates/assets/: tree.html
tools/cognition/templates/css/: service_status.css
tools/cognition/templates/js/: conversation.js
tools/discord/: Cargo.toml  README.md
tools/discord/src/: config.rs  main.rs  user.rs
tools/ffmpeg_ai/: Cargo.toml
tools/ffmpeg_ai/src/: main.rs
tools/goose_attack/: Cargo.toml  README.md
tools/goose_attack/attack_rag_server/: attack_rag_server.md
tools/goose_attack/docs/: attack_rag_server.md  bioma_llm.md  llm.md
tools/goose_attack/src/: attack_rag_server.rs
tools/rag_server/: Cargo.toml  README.md
tools/rag_server/docs/: openapi.json  rag_server.md
tools/rag_server/examples/: rag_uploader.rs
tools/rag_server/src/: client.rs  config.rs  main.rs  request_schemas.rs  server.rs  tool.rs
tools/rag_server/templates/: rag_chat.html
(+115 files in other folders)
