[workspace]
members = [
    "tools/*",
    "bioma_actor",
    "bioma_behavior",
    "bioma_derive",
    "bioma_llm",
]
resolver = "2"

default-members = ["bioma_actor"]

[profile.release]
debug = true

[profile.dev.package.askama_derive]
opt-level = 3

[workspace.dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
surrealdb-beta = { version = "2.0.2", features = ["kv-mem"] }
uuid = "1.10"
thiserror = "1.0"
derive_more = "0.99"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.4", features = ["serde"] }
futures = "0.3"
humantime = "2.1"
humantime-serde = "1.1"
jsonpath-rust = "0.5"
bon = "2.1"
object_store = { version = "0.11.0", features = ["serde"] }
url = { version = "2", features = ["serde"] }
test-log = { version = "0.2", default-features = false, features = [
    "trace",
    "color",
] }
console-subscriber = "0.4"
color-backtrace = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
reqwest = "0.12"

bioma_derive = { path = "../bioma_derive" }
