[workspace]
members = [
    "tools/*",
    "bioma_actor",
    "bioma_behavior",
    "bioma_llm",
    "bioma_tool",
]
resolver = "2"

default-members = ["bioma_actor"]

[profile.release]
debug = true

[profile.dev.package.askama_derive]
opt-level = 3

[workspace.dependencies]
# Async Runtime and Networking
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.26"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["multipart"] }
jsonrpc-core = "18.0"

# Database and Storage
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
object_store = { version = "0.11", features = ["serde"] }

# Serialization and Schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
bon = "3.1"

# Error Handling and Utilities
thiserror = "2.0"
anyhow = "1.0"
derive_more = "0.99"

# Logging and Debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2"
test-log = { version = "0.2", default-features = false, features = [
    "trace",
    "color",
] }
console-subscriber = "0.4"
color-backtrace = "0.6"

# ID Generation
uuid = "1.10"
ulid = "1.1"
hostname = "0.4.0"

# Time Handling
humantime = "2.1"
humantime-serde = "1.1"
chrono = "0.4"

# File System and Path Operations
glob = "0.3"
walkdir = "2.4"
zip = "2.2"
tempfile = "3.14.0"

# CLI and Configuration
clap = { version = "4.5", features = ["derive"] }

# Web and Parsing
url = { version = "2", features = ["serde"] }
html2md = "0.2"
readability-rs = "0.5"
robotstxt = "0.3"

# Web Framework
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-files = "0.6"

# Documentation
utoipa = "5.3.1"

# Template Engine
askama = "0.12"

# Testing
goose = { git = "https://github.com/tag1consulting/goose.git", rev = "1a8280e1a2e2a1bbd01bccc7bdcd40f7c82db73c" }
mockito = "1.6"

# Utilities
strum = "0.26"
tokio-stream = "0.1"
once_cell = "1.20"
lazy_static = "1.5"
base64 = "0.22"
rand = "0.8"
indexmap = "2.7"

# LLM
# ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs.git", rev = "a1f2bb5c5161d4879b089104e8753990c832ba9c", features = [
#     "function-calling",
#     "stream",
# ] }
ollama-rs = { git = "https://github.com/VertexStudio/ollama-rs.git", rev = "95c7295a15ef91e25f86ca3c5d41eb7eedf46db5", features = [
    "stream",
] }
# ollama-rs = { path = "../ollama-rs", features = [
#     "stream",
# ] }
