[package]
name = "bioma_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
surrealdb-alpha = { version = "2.0.9", default-features = false }
uuid = "1.10"
thiserror = "1.0"
derive_more = "0.99"
as-any = "0.3"
typetag = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.4", features = ["serde"] }
futures = "0.3"
humantime = "2.1"
humantime-serde = "1.1"
jsonpath-rust = "0.5"
tracing = "0.1"

bioma_derive = { path = "../bioma_derive" }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = [
    "trace",
    "color",
] }
surrealdb-alpha = { version = "2.0.9", default-features = false, features = [
    "kv-mem",
] }
color-backtrace = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
