[package]
name = "bioma_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
surrealdb-beta = { workspace = true, features = ["kv-mem"] }
uuid = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
futures = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
jsonpath-rust = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
object_store = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }

bioma_derive = { path = "../bioma_derive" }

[dev-dependencies]
test-log = { workspace = true, default-features = false, features = [
    "trace",
    "color",
] }
color-backtrace = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
rand = { workspace = true }
