[package]
name = "bioma_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
uuid = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
object_store = { workspace = true, features = ["serde", "aws"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
test-log = { workspace = true, default-features = false, features = [
    "trace",
    "color",
] }
color-backtrace = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
rand = { workspace = true }
console-subscriber = { workspace = true }
futures-util = { workspace = true }
