[package]
name = "bioma_behavior"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
derive_more = "0.99"
as-any = "0.3"
ractor = "0.9"
typetag = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.2", features = ["serde"] }
futures = "0.3"
humantime = "2.1"
humantime-serde = "1.1"
jsonpath-rust = "0.5"