[package]
name = "bioma_behavior"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = "1.10"
thiserror = "1.0"
once_cell = "1.19"
derive_more = "0.99"
as-any = "0.3"
typetag = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.4", features = ["serde"] }
futures = "0.3"
humantime = "2.1"
humantime-serde = "1.1"
jsonpath-rust = "0.5"

bioma_derive = { path = "../bioma_derive" }
bioma_actor = { path = "../bioma_actor" }
