[package]
name = "bioma_knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
surrealdb-alpha = "2.0.5"
# async-trait = "0.1.80"
# derive_more = "0.99"
# as-any = "0.3"
# ractor = "0.9"
# typetag = "0.2"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# indexmap = "2.2"
# futures = "0.3"
# humantime = "2.1.0"
# humantime-serde = "1.1.1"