[package]
name = "bioma_knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
surrealdb = "1.5.4"
ollama-rs = { version = "0.2.0", features = [
    "chat-history",
    "function-calling",
] }
base64 = "0.22.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async-trait = "0.1.80"
# derive_more = "0.99"
# as-any = "0.3"
# ractor = "0.9"
# typetag = "0.2"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# indexmap = "2.2"
# futures = "0.3"
# humantime = "2.1.0"
# humantime-serde = "1.1.1"
