[package]
name = "bioma_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
uuid = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { version = "2.4", features = ["serde"] }
futures = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
glob = { workspace = true }
bon = { workspace = true }
lazy_static = "1.5.0"
walkdir = { workspace = true }
zip = { workspace = true }

ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs", rev = "56d7ec24e656840a9a81437ea4324d0fcc2189c6", features = [
    "function-calling",
] }
hf-hub = "0.3.2"
fastembed = "4.3"
# fastembed = { path = "../../fastembed-rs" }
# fastembed = { git = "https://github.com/rozgo/fastembed-rs", branch = "feature/nomic-embed-vision-v1.5" }

text-splitter = { version = "0.16.0", features = ["code", "markdown"] }
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-cpp = "0.23.0"
# tree-sitter-html = "0.23.0"
# tree-sitter-csv = "1.2.0"
# tree-sitter-typescript = "0.23.0"
tree-sitter-cue = { git = "https://github.com/rozgo/tree-sitter-cue.git", branch = "main" }
tree-sitter-csv = { git = "https://github.com/rozgo/tree-sitter-csv.git", branch = "master" }
mdka = "1.2"

bioma_derive = { path = "../bioma_derive" }
bioma_actor = { path = "../bioma_actor" }

ort = { version = "=2.0.0-rc.9", default-features = false, features = [
    "ndarray",
] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.9", default-features = false, features = [
    "ndarray",
    "coreml",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.9", default-features = false, features = [
    "ndarray",
    "cuda",
] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = [
    "trace",
    "color",
] }
color-backtrace = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
anyhow = "1.0"
goose = "0.17.2"
ctor = "0.2"
