[package]
name = "bioma_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
uuid = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
glob = { workspace = true }
bon = { workspace = true }
lazy_static = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }

# ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs.git", rev = "a1f2bb5c5161d4879b089104e8753990c832ba9c", features = [
#     "function-calling",
#     "stream",
# ] }
ollama-rs = { git = "https://github.com/VertexStudio/ollama-rs.git", rev = "e28ab5aab3c56ffc7849fa263e5dfc773a99bbe3", features = [
    "stream",
] }
# ollama-rs = { path = "../../ollama-rs", features = [
#     "stream",
# ] }
hf-hub = "0.3.2"
fastembed = "4.3"

text-splitter = { version = "0.19.0", features = ["code", "markdown"] }
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-cpp = "0.23.0"
# tree-sitter-html = "0.23.0"
# tree-sitter-csv = "1.2.0"
# tree-sitter-typescript = "0.23.0"
tree-sitter-cue = { git = "https://github.com/rozgo/tree-sitter-cue.git", branch = "main" }
tree-sitter-csv = { git = "https://github.com/rozgo/tree-sitter-csv.git", branch = "master" }
mdka = "1.2"
image = "0.25"
base64 = "0.22"

bioma_actor = { path = "../bioma_actor" }

ort = { version = "=2.0.0-rc.9", default-features = false, features = [
    "ndarray",
] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.9", default-features = false, features = [
    "ndarray",
    "coreml",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.9", default-features = false, features = [
    "ndarray",
    "cuda",
] }

[dev-dependencies]
test-log = { workspace = true }
color-backtrace = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
