[package]
name = "bioma_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
bon = { workspace = true }
utoipa = { workspace = true }

bioma_actor = { path = "../bioma_actor" }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
