[package]
name = "bioma_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jsonrpc-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
html2md = { workspace = true }
readability-rs = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
robotstxt = { workspace = true }
schemars = { workspace = true }
# SSE dependencies
# axum = "0.6.20"
actix-web = "4.4.0"
actix = "0.13.1"
actix-http = "3.4.0"
actix-web-lab = "0.20.0"
async-stream = "0.3.5"
uuid = { version = "1.3", features = ["v4"] }

bioma_actor = { path = "../bioma_actor" }

[dev-dependencies]
mockito = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
