[package]
name = "bioma_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jsonrpc-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
html2md = { workspace = true }
readability-rs = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
robotstxt = { workspace = true }
schemars = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true }

bioma_actor = { path = "../bioma_actor" }

[dev-dependencies]
mockito = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
