[package]
name = "bioma_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jsonrpc-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
html2md = { workspace = true }
readability-rs = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
robotstxt = { workspace = true }
schemars = { workspace = true }
bon = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
derive_more = { workspace = true }

base64 = "0.13.0"
notify = "8.0.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0"
bytes = "1.5.0"

[dev-dependencies]
mockito = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
tempfile = "3.3.0"
