[package]
name = "rag_mcp"
version = "0.1.0"
edition = "2024"
description = "RAG MCP server implementation"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
actix-web = { workspace = true }

bioma_mcp = { path = "../../bioma_mcp" }
bioma_rag = { path = "../../bioma_rag" }
bioma_actor = { path = "../../bioma_actor" }
bioma_llm = { path = "../../bioma_llm" }
