[package]
name = "cognition"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
ollama-rs = { workspace = true }
schemars = { workspace = true }
utoipa = { workspace = true }
url = { workspace = true }

bioma_actor = { path = "../../bioma_actor" }
bioma_llm = { path = "../../bioma_llm" }
bioma_tool = { path = "../../bioma_tool" }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }

[[bin]]
name = "cognition-client"
path = "src/client.rs"

[[bin]]
name = "cognition-server"
path = "src/server.rs"
