[package]
name = "cognition"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
ollama-rs = { workspace = true }
utoipa = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bioma_actor = { path = "../../bioma_actor" }
bioma_llm = { path = "../../bioma_llm" }
bioma_rag = { path = "../../bioma_rag" }
bioma_tool = { path = "../../bioma_tool" }
askama = { workspace = true }
actix-files = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "cognition-client"
path = "src/client.rs"

[[bin]]
name = "cognition-server"
path = "src/server.rs"
