[package]
name = "goose_attack"
version = "0.1.0"
edition = "2021"

[dependencies]
bioma_actor = { path = "../../bioma_actor" }
bioma_behavior = { path = "../../bioma_behavior" }
bioma_llm = { path = "../../bioma_llm" }
bioma_tool = { path = "../../bioma_tool" }
clap = { workspace = true }
goose = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Binaries
[[bin]]
name = "attack_rag_server"
path = "src/attack_rag_server.rs"
