[package]
name = "rag_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }

bioma_actor = { path = "../../bioma_actor" }
bioma_llm = { path = "../../bioma_llm" }
